svbCHANGELOG
=========
+-----------------------+
| VERSION: 0.6.0RC3     |
+-----------------------+
BUGFIXES
01-05-06    Installer password was wiped doing a rebuild, now fixed (Julien Casanova)

IMPROVEMENTS
01-05-06    You can now customise the location of the upload directory
30-04-06    HTML date widget cleanup
30-04-06    Module generator can now add additional managers per module
27-04-06    Wizard functionality reinstated (Steven Stremciuc)
26-04-06    Added ability to customise location of the modules directory
24-04-06    Modified RSS export to use custom filter chain
22-04-06    Japanese translation added (Dozo Yousan)

+-----------------------+
| VERSION: 0.6.0RC2     |
+-----------------------+
BUGFIXES
22-04-06    Fixed problem where selecting 'store langs in DB' during install, but
            then selecting none from list resulted in a fatal error (Heinrich Stoellinger)
21-04-06    DB_DataObject fails to overwrite an existing keys file with 'rebuild
            dataobjects', now file removal forces update
21-04-06    Postgres now works well, thanks to AJ and Sbaturzio for their help
21-04-06    Bug where DB_DataObjects wouldn't work correctly with MySQL5 or
            Postgres fixed, unique indexes removed from usr table
15-04-06    At long last, thanks to matt from IRC, Seagull will install properly
            on MySQL 3.23
12-04-06    List of stylesheets now correctly drawn from configured default theme,
            not session.
12-04-06    Made instructions clearer for adding default module and manager
07-04-06    Link to news items corrected (alphasock@disona.net)
14-03-06    Fixed Config::merge behaviour (Miha Vrhovnik)
14-03-06    Fixed query for listing users with a left join (mstahv)

IMPROVEMENTS
22-04-06    Added ability to control DB_DataObject debug level from Config
21-04-06    Added ability to force cache usage, overriding perferences, ie:
                $cache = & SGL_Cache::singleton($force = true);