@@ -1,0 +1,3 @@
+[instant_message]
+user_id_from = usr:usr_id
+user_id_to = usr:usr_id
