@@ -1,0 +1,4 @@
+[document]
+category_id = category:category_id
+document_type_id = document_type:document_type_id
+added_by = usr:usr_id
